--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ background-color: #67676767;
     background-color: #9b59b6;
 }
 
+.bg-color-contact{
+    background-color: #3498db;
+}
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -323,4 +326,37 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/* ----------------------------------------Contact Form ---*/
+.contact-heading {
+    font-family: "Exo",sans-serif;
+    font-weight:300;
+    margin-top: 25px; /*negative space */
+    margin-bottom: 30px;
+}
+
+.center-form{
+    max-width:70%;
+    padding-top: 10px;
+    margin: 0 auto;
+}
+
+button[type="submit"]{
+    margin-top: 10px;
+    scroll-margin-bottom: 10px;
+    color: #fafafa;
+    background-color: #e84610; /* Code Institute Red */
+    margin-bottom: 10px;
+}
+
+/* ----------------------------------------Media Query ---*/
+
+@media(min-width:992px){
+    .center-form{
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
